@@ -47,6 +47,7 @@ class AndroidProjectConfigPlugin : Plugin<Project> {
           "--add-opens=java.base/java.security=ALL-UNNAMED",
           "--add-opens=java.base/java.text=ALL-UNNAMED",
           "--add-opens=java.base/java.util=ALL-UNNAMED",
+          "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
           "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
           "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
           "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
